Major updates that updates the whole project cause git got corrupted on local repo